force-app/main/default/objects/User_Mail_Verify_Setting__mdt/fields/Chunk_Size_Reset__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Size_Reset__c</fullName>
    <label>Chunk Size Reset</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>