force-app/main/default/objects/User_Mail_Verify_Setting__mdt/fields/Max_Rows_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Max_Rows_Displayed__c</fullName>
    <label>Max Rows Displayed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>