force-app/main/default/objects/User_Mail_Verify_Setting__mdt/fields/Max_Users_Per_Run__c.field-meta.xml
<CustomField>
    <fullName>Max_Users_Per_Run__c</fullName>
    <label>Max Users Per Run</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>