force-app/main/default/objects/User_Mail_Verify_Setting__mdt/fields/Notification_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type_Name__c</fullName>
    <label>Notification Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>